# Automata

./: lab1.manifest.yaml  lab2.manifest.yaml  lab3.manifest.yaml  lab4.manifest.yaml  lab5.manifest.yaml  lab6.manifest.yaml
DetermineNFA/: DetermineNFA.sln
DetermineNFA/DetermineNFA/: DetermineNFA.py  DetermineNFA.pyproj  in.csv  out.csv
GrammarReader/: GrammarReader.sln
GrammarReader/GrammarReader/: GrammarReader.py  GrammarReader.pyproj  left.txt  left_output.csv  output.csv  right.txt  right_output.csv
MealyMooreConverter/: CMakeLists.txt
MealyMooreConverter/MealyMooreConverter/: 1_moore.csv  5_rev_mealy.csv  CMakeLists.txt  MealyMooreConverter.cpp  MealyMooreConverter.h
Minimize/: CMakeLists.txt
Minimize/Minimize/: CMakeLists.txt  Minimize.cpp
RegexToNFA/: RegexToNFA.sln
RegexToNFA/RegexToNFA/: RegexToNFA.py  RegexToNFA.pyproj  out.csv
lexer/: generated_tokens.txt  in.pas  in1.txt  lexer.py  lexer.pyproj  out.tok  reference_tokens.txt  src.txt
visualizer/: visualizer.sln
visualizer/visualizer/: 1.csv  visualizer.py  visualizer.pyproj
visualizer/visualizer/renders/: 1.csv  out.csv
